edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents the content of the EF_Card_Download file for a driver card.
//
// The file structure is specified in Appendix 2, Section 4.2.1.
//
//     EF Card_Download
//     └─LastCardDownload
//
// The data type `LastCardDownload` is specified in the Data Dictionary, Section 2.89.
//
// ASN.1 Specification:
//
//     LastCardDownload ::= TimeReal
//
message CardDownloadDriver {
  // The timestamp of the last card download.
  //
  // See Data Dictionary, Section 2.89, `LastCardDownload` and Section 2.162, `TimeReal`.
  // ASN.1 Specification:
  //
  //     TimeReal ::= INTEGER (0..2^32-1)
  google.protobuf.Timestamp timestamp = 1;

  // Digital signature for the EF_Card_Download file content.
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  // ASN.1 Specification:
  //
  //     Signature ::= OCTET STRING (SIZE(128 for Gen1))
  bytes signature = 2;
}
